# DSGE-model

./: .gitignore  AGENTER.md  CLAUDE.md  PROSJEKTPLAN (1).md  PROSJEKTPLAN.md  README.md  README.txt  STRUKTUR.md  analyse_resultater.json  blanchard_kahn.py  crosscheck_dashboard.html  crosscheck_dashboard_builder.py  crosscheck_data.csv  crosscheck_data.py  crosscheck_ensemble.json  crosscheck_forecast.py  crosscheck_meta.json  crosscheck_models.py  crosscheck_results.json  dashboard_eksempel.html  dashboard_template.html  equations.py  main.py  nemo_analyse.py  nemo_dashboard.html  nemo_dashboard_built.html  nemo_dashboard_data.json  nemo_data_faktisk_v2.csv  nemo_data_innhenting.py  nemo_estimering_v3.py  nemo_fase2_dokumentasjon.docx  nemo_fase2_v3_dashbord (5).html  prosjektplan_fase3.txt  pyproject.toml
.github/workflows/: data_pipeline.yml  deploy-dashboard.yml  mcmc.yml  run_analyse.yml  run_fase3.yml  tests.yml
docs/: D_modellfit_fase2v2.md  MODEL.md  fase05_sluttrapport.md  fase2_analyse_rapport.md  fase2_phi1fix_analyse_rapport.md  index.html  staff-memo-2025-15-georg.txt  trinn1_hc_diagnose.md
scripts/: b5_kj10_analyse.py  b5_kj12_analyse.py  b5_kj15_kj17_analyse.py  b5_kj18_analyse.py  b5_nb_benchmark.py  c2_prior_posterior_analysis.py  c3_sigma_rp_experiment.py  c8_mixing_diagnosis.py  d_model_fit.py  d_model_fit_alt_a.py  d_model_fit_fase2.py  d_model_fit_fase2v2.py  fase2_5blokk_production.py  fase2_analyse.py  fase2_blokk_production.py  fase2_c3fix_production.py  fase2_diagnostic.py  fase2_hcfix_production.py  fase2_kj10_akkumuler.py  fase2_kj11_akkumuler.py  fase2_kj12_akkumuler.py  fase2_kj13_akkumuler.py  fase2_norer_production.py  fase2_phi1fix_production.py  fase2_phib_production.py  fase2_phio_phi1_akkumuler.py  fase2_phio_phi1_production.py  fase2_phio_production.py  fase2_postfix_production.py  fase2_production.py  fase2_reparam_diagnostikk.py  fase2_reparam_production.py  fase2v2_production.py  irf_kj35_vs_nb.py  kj10_prod.py  kj10_vakt.sh  kj11_prod.py  kj11_vakt.sh  kj12_prod.py  kj13_prod.py  (+51 more)
tests/: conftest.py  test_analysis_package.py  test_dashboard.py  test_data_pipeline.py  test_fevd_sum.py  test_georg.py  test_irf_signs.py  test_likelihood.py  test_mcmc_reparam.py  test_plt_kanal.py  test_reparam.py  test_rpendo.py  test_solver.py  test_steady_state.py
(+174 files in other folders)
